# usbguard_notify

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: dbus.rs  lib.rs  main.rs  notification.rs  usbguard_api.rs
src/dbus/: DBusInterface.xml  generated.rs
