[package]
name = "usbguard_notify"
version = "0.1.0"
authors = ["Leopold Johannes Meinel"]
edition = "2021"
description = "Manage usbguard device policy with notifications"
homepage = "https://leo.meinel.dev/usbguard_notify"
repository = "https://github.com/LeoMeinel/usbguard_notify"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
notify-rust = "4.5.10"
zbus = {version = "3.5.0", default-features = false, features = ["tokio"]}
tokio = { version = "1.22.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
